Published multiple files